# buf_sized

./: Cargo.toml  README.md
src/: impls.rs  lib.rs
src/impls/: generics.rs  primitives.rs
tests/: derive.rs
