[package]
name = "buf_sized"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = { version = "0.8.0", optional = true }
buf_sized_derive = { git = "https://github.com/PaulmannLighting/buf_sized_derive", optional = true }

[features]
heapless = ["dep:heapless"]
derive = ["dep:buf_sized_derive"]